# ast-shaper

./: Cargo.toml  README.md
src/: lib.rs
src/functions/: mod.rs  rename.rs  transform.rs  trim_path.rs  trim_path_test.rs
src/items/: enum_item.rs  fn_item.rs  implementation_item.rs  item.rs  macro_.rs  mod.rs  module_item.rs  other_item.rs  source_file.rs  struct_item.rs  use_item.rs
src/test_utils/: fixtures.rs
src/utils/: mod.rs  name_conventions.rs  naming_conventions_test.rs  parsing.rs  path.rs  punctuated.rs  statement.rs
src/walkers/: angle_bracketed_generic_arguments.rs  expr.rs  fields.rs  generic_argument.rs  generic_param.rs  generics.rs  macro_.rs  mod.rs  path.rs  pattern.rs  signature.rs  statement.rs  type_.rs  type_param_bound.rs  where_clause.rs
